crates/swc_ecma_parser/tests/test262-error-references/fail/ff7e007caeff659d.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/ff7e007caeff659d.js:1:7
  |
1 | (...[ 5 ]) => {}
  |       ^

